--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.10",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.2.0",
     "dotenv": "^16.4.5",
     "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
