--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.2.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
